Fix H3 was overlapping in the smallest breaking point

--- a/resources/templates/themes/nucleus/css/typography.css
+++ b/resources/templates/themes/nucleus/css/typography.css
@@ -50,7 +50,7 @@ h3 {
     font-family: "Montserrat";
     font-size: 20px;
     text-transform: uppercase;
-    line-height: 16px;
+    line-height: 26px;
     letter-spacing: -0.4px;
     color: #111;
 }
